# pp-server

./: .gitignore  db.sqlite3  dummy_chat.py  dummy_user.py  pyproject.toml  test.py
chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  tests.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_initial.py  0003_chatmessage_created_at_chatmessage_updated_at_and_more.py
common/: models.py  sms.py  urls.py  utils.py  views.py
config/: asgi.py  settings.py  urls.py
dummy/: urls.py  views.py
medias/: models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_photo_post.py
pharmacies/: admin.py  models.py  serializers.py  urls.py  views.py
pharmacies/migrations/: 0001_initial.py  0002_account.py  0002_initial.py  0003_alter_account_ammount.py  0003_rename_address_road_pharmacy_address_str_and_more.py
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_initial.py  0002_rename_title_reply_article_post_kind.py  0003_alter_post_kind.py  0003_alter_reply_reply.py
records/: admin.py  models.py  serializers.py
records/migrations/: 0001_initial.py  0002_alter_record_post_alter_record_reply_and_more.py  0002_initial.py  0003_initial.py  0004_postrecord_replyrecord_resumerecord_delete_record.py  0005_postrecord_value_replyrecord_value_and_more.py  0006_remove_postrecord_value_remove_replyrecord_value_and_more.py  0007_resumelike_delete_resumerecord.py  0008_alter_resumelike_resume.py
schedules/: admin.py  models.py  serializer.py  urls.py  views.py
schedules/migrations/: 0001_initial.py  0002_initial.py  0003_alter_day_date.py  0003_alter_day_date_alter_day_unique_together.py  0003_remove_schedule_description_remove_schedule_user_and_more.py  (+13 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+13 files in other folders)
